--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = mousemover
+name = Mouse-Mover
 version = 0.1.0
 description = Move your mouse and keep that Teams icon green!
 project_urls =
